Fix bug causing error tooltip to disappear

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -213,7 +213,7 @@
 			}
 			.tooltip-box {
 				position: absolute;
-				top: 28px;
+				top: 24px;
 				right: 24px;
 				max-height: 150px;
 				padding: var(--radius-base);
@@ -229,7 +229,7 @@
 			}
 			.tooltip-list {
 				list-style-type: disc;
-				padding-left: var(--spacing-base);
+				padding: 6px;
 				margin: 0;
 			}
 			.tooltip-list li {
