Update tooltip padding

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -233,6 +233,7 @@
 				display: none;
 			}
 			.tool-tip-icon {
+				padding: 2px;
 				width: 24px;
 				height: 24px;
 				background-color: var(--background);
