Handle case where ai generated table may overflow

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -96,6 +96,7 @@
 			table {
 				border-collapse: collapse;
 				display: block;
+				overflow-x: auto;
 			}
 			table .disabled {
 				color: var(--disabled-text);
